styles.css
.hero,
.footer {
    background-color: #1F2937;
}

.header-logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: bold;
}

.hero{
    color: #E5E7EB;
    font-size: 18px;
    padding-bottom: 70px;
}
.hero-main-text {
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
}

.hero {
    display: flex;
    justify-content: space-around;
    flex-direction: column;
}
.hero-content-1,
.hero-content-2 {
    display: flex;
    justify-content: space-around;
    align-items: center;
}
.links {
    display: flex;
    gap: 20px;
}
.hero-content-sub {
    width: 320px;
}
button {
    background-color: #3882F6;
    width: 120px;
    height: 40px;
    color: #E5E7EB;
    border-radius: 6%;
    border: 0;
    font-weight: bold;
}

